--- a/CheckPointFinal-vanessa-matos/movie/src/main/resources/application.yml
+++ b/CheckPointFinal-vanessa-matos/movie/src/main/resources/application.yml
@@ -1,24 +1,3 @@
-server:
-  port: 8086
-  servlet:
-    context-path: /movie/
 spring:
-  config:
-    import: optional:configserver:http://config:8888/
-  application:
-    name: movie-service
-  cloud:
-    config:
-      profile: ${profile:dev}
-  datasource:
-    driverClassName: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://host.docker.internal:3306/movie
-    url: jdbc:mysql://localhost:3306/movie
-    username: root
-#    username: usuarioAplicacao
-    password: root
-#    password: 123456789Tu
-    jpa:
-      hibernate.ddl-auto: update
-      generate-ddl: true
-      show-sql: true
+  profiles:
+    default: dev
