--- a/CheckPointFinal-vanessa-matos/catalogo/Dockerfile
+++ b/CheckPointFinal-vanessa-matos/catalogo/Dockerfile
@@ -1,5 +1,6 @@
-FROM adoptopenjdk/openjdk11:alpine-jre
+#FROM openjdk:11.0.16-jdk-slim
+FROM openjdk:11.0.16-jdk-slim
 ARG JAR_FILE=target/catalogo.jar
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
-EXPOSE 8085
+ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-jar", "app.jar"]
+EXPOSE 8084
