--- a/CheckPointFinal-vanessa-matos/docker-compose.yml
+++ b/CheckPointFinal-vanessa-matos/docker-compose.yml
@@ -7,60 +7,40 @@ services:
     container_name: zipkin-service
     ports:
       - 9411:9411
-  
-  eureka:
-    build: eureka
-    container_name: eureka
-    depends_on:
-      - zipkin-service
-    ports:
-      - 8761:8761
 
-  config:
-    build: config
-    container_name: config
-    depends_on:
-      - eureka
-    ports:
-      - 8888:8888
-  
   rabbitmq-service:
     image: rabbitmq:3-management
     container_name: rabbitmq-service
-    depends_on:
-      - eureka
     ports:
       - 5672:5672
       - 15672:15672
-  
-  catalogo:
-    build: catalogo
-    container_name: catalogo
-    depends_on:
-      - config
+
+  db-movie:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: usuarioAplicacao
+      MYSQL_PASSWORD: 123456789Tu
+      MYSQL_DATABASE: movie
     ports:
-      - 8085:8085
-  
-  movie:
-    build: movie
-    container_name: movie
-    depends_on:
-      - catalogo
+      - 3301:3306
+
+  db-catalogo:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: usuarioAplicacao
+      MYSQL_PASSWORD: 123456789Tu
+      MYSQL_DATABASE: catalogo
     ports:
-      - 8086:8086
-  
-  series:
-    build: series
-    container_name: series
-    depends_on:
-      - movie
+      - 3302:3306
+
+  db-series:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: usuarioAplicacao
+      MYSQL_PASSWORD: 123456789Tu
+      MYSQL_DATABASE: series
     ports:
-      - 8087:8087
-   
-  gateway:
-    build: gateway
-    container_name: gateway
-    depends_on:
-      - series
-    ports:
-      - 8080:8080
+      - 3303:3306
