--- a/CheckPointFinal-vanessa-matos/eureka/src/main/resources/application.yml
+++ b/CheckPointFinal-vanessa-matos/eureka/src/main/resources/application.yml
@@ -1,13 +1,3 @@
-server:
-  port: 8761
-
 spring:
-  application:
-    name: eureka-service
-  zipkin:
-    base-url: http://zipkin-service:9411/
-
-eureka:
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
+  profiles:
+    default: dev
