--- a/CheckPointFinal-vanessa-matos/series/Dockerfile
+++ b/CheckPointFinal-vanessa-matos/series/Dockerfile
@@ -1,5 +1,5 @@
-FROM adoptopenjdk/openjdk11:alpine-jre
+FROM openjdk:11.0.16-jdk-slim
 ARG JAR_FILE=target/series.jar
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=docker", "-jar", "app.jar"]
 EXPOSE 8087
